# Windows-specific installation

# Install configuration and documentation files
install(FILES
        ${ISIMPA_RESSOURCES}/appconst.xml
        ${ISIMPA_RESSOURCES}/license.html
        isimpa.ico
        DESTINATION ${ISIMPA_DATA_DIR})


# Copy python libraries
get_filename_component(PYTHON_ROOT_FOLDER ${Python3_EXECUTABLE} PATH)

install(DIRECTORY
        ${PYTHON_ROOT_FOLDER}/Lib
        ${PYTHON_ROOT_FOLDER}/DLLs
        DESTINATION .
        PATTERN "Lib/site-packages" EXCLUDE
        PATTERN "*.pdb" EXCLUDE)

install(FILES "${PYTHON_ROOT_FOLDER}/python.exe" DESTINATION .)

if(CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS)
    install(PROGRAMS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION . COMPONENT Runtime)
endif()

SET(CPACK_GENERATOR "NSIS;ZIP")

set(CPACK_SOURCE_IGNORE_FILES
        /bin/wx*
        /lib/cmake/wxWidgets
        /lib/wx
        /lib/*.a
)

SET(CPACK_BUNDLE_NAME "I-SIMPA")
SET(CPACK_BUNDLE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/isimpa.ico")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "I-SIMPA")
SET(CPACK_PACKAGE_VENDOR "UMRAE, CEREMA, Univ Gustave Eiffel")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/DESCRIPTION.txt")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.md")
SET(CPACK_PACKAGE_VERSION_MAJOR ${isimpa_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${isimpa_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${isimpa_VERSION_PATCH})
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "I-SIMPA")
SET(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/isimpa.ico")
SET(CPACK_NSIS_EXECUTABLES_DIRECTORY ".")
set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "  CreateShortCut '$DESKTOP\\\\I_SIMPA.lnk' '$INSTDIR\\\\isimpa.exe' ")
set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "Delete '$DESKTOP\\\\I_SIMPA.lnk'")
SET(CPACK_NSIS_INSTALLED_ICON_NAME "isimpa.exe")
SET(CPACK_NSIS_DISPLAY_NAME "I-SIMPA")
SET(CPACK_NSIS_HELP_LINK "http:\\\\\\\\i-simpa-wiki.readthedocs.io")
SET(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\i-simpa.unv-eiffel.fr")
SET(CPACK_NSIS_CONTACT "contact@noise-planet.org")
SET(CPACK_NSIS_MODIFY_PATH ON)
SET(CPACK_STRIP_FILES TRUE)
SET(CPACK_SOURCE_STRIP_FILES "")

SET(CPACK_PACKAGE_EXECUTABLES "isimpa" "I-SIMPA")

INCLUDE(CPack)
